правки после ревью